--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,12 +7,12 @@
 
     <div class="form-group has-success">
       <%= f.label :name, '名前' %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "名前", class: "form-control" %>
     </div>
 
     <div class="form-group has-success">
       <%= f.label :email, 'メールアドレス' %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", class: "form-control" %>
     </div>
 
     <div class="form-group has-success">
@@ -20,12 +20,12 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> 文字以上入力してください)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: "form-control" %>
     </div>
 
     <div class="form-group has-success">
       <%= f.label :password_confirmation, 'パスワードの確認' %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード再入力", class: "form-control" %>
     </div>
 
     <div class="actions">
