--- a/app/assets/stylesheets/module/_style.scss
+++ b/app/assets/stylesheets/module/_style.scss
@@ -11,7 +11,7 @@ body {
   font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", sans-serif;
   font-weight: 800;
   line-height: 2.0;
-  background-image: url(sora.jpeg);
+  background-image: url(sora.jpg);
   background-size: cover;
   color: black;
 }
