--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-md-11">
     <h1 class="title">編集画面</h1>
-    <%= image_tag 'niji2.jpeg' %>
+    <%= image_tag 'niji2.jpg' %>
     <div class="article-block">
       <%= render partial: 'form', article: @article %>
     </div> 
